--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -122,6 +122,7 @@
 					</td>
 					<td>{{if data.data.mall_type == 1}}
 							{{if product.is_sync }}<i class="xui-icon-sync">同</i>{{/if}}
+							{{if product.type == 'virtual' || product.type == 'wzcard' }}<i class="xui-virtualProductIcon">码</i>{{/if}}
 							${product.store_name}
 						{{else}}
 							${product.bar_code}
