--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -115,7 +115,7 @@
 						${item.created_at}
 					</td>
 					<td>
-						<a href="/mall2/virtual_product/?" class="" style="width: 120px;text-decoration:none;display:block;">码库详情</a>
+						<a href="/mall2/virtual_product_codes/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">码库详情</a>
 						<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">编辑</a>
 						<a href="javascript:void(0);" class="xa-activeFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
 					</td>
