--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -116,8 +116,12 @@
 					</td>
 					<td>
 						<a href="/mall2/virtual_product_codes/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">码库详情</a>
-						<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">编辑</a>
-						<a href="javascript:void(0);" class="xa-activeFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
+						{{if item.is_finished }}
+							<span>已结束</span>
+						{{else}}
+							<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">增加</a>
+							<a href="javascript:void(0);" class="xa-activeFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
+						{{/if}}
 					</td>
 				</tr>
 				{{/each}}
