--- a/weapp/mall/templates/mall/editor/promotion/virtual_products.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_products.html
@@ -119,7 +119,7 @@
 						{{if item.is_finished }}
 							<span>已结束</span>
 						{{else}}
-							<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">增加</a>
+							<a href="/mall2/virtual_product/?id=${item.id}" class="" style="width: 120px;text-decoration:none;display:block;">增加库存</a>
 							<a href="javascript:void(0);" class="xa-activeFinish" style="width: 120px;text-decoration:none;display:block;">结束</a>
 						{{/if}}
 					</td>
