未领用-未领取，二者要统一

--- a/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
@@ -12,8 +12,8 @@
 				<label>领用状态：</label>
 				<select id="status" name="status">
 					<option value ="-1">全部</option>
-					<option value ="0">未领用</option>
-					<option value ="1">已领用</option>
+					<option value ="0">未领取</option>
+					<option value ="1">已领取</option>
 					<option value ="2">已过期</option>
 				</select>
 			</div>
@@ -96,6 +96,7 @@
 </div>
 <div class="xui-btn-group">
 	<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
-	<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
+	<a class="btn btn-default xa-reset xui-fontBold mr40" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
+	<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">导&nbsp;&nbsp;&nbsp;出</a>
 </div>
 </script>
