--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_wallet_details.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_wallet_details.html
@@ -189,7 +189,7 @@
 					<thead>
 					<tr>
 						<td class="xui-order-time">时间</td>
-{#						<td class="xui-order-money">明细</td>#}
+						<td class="xui-order-money">明细</td>
 						<td class="xui-order-destination">去处/来源</td>
 					</tr>
 					</thead>
@@ -200,39 +200,27 @@
 							{{order.created_at | date:"Y-m-d" }}
 							<br/>{{order.created_at | date:"H:i:s"}}
 						</td>
-{#						<td class="xui-order-info-money xui-fontArial">#}
-{#							{% if order.event_type == '积分兑换' %}#}
-{#								<span style="color: #0fb202">#}
-{#								+{{order.money}}#}
-{#								</span>#}
-{#							{% else %}#}
-{#								{% if order.money < '0' %}#}
-{#									<span style="color: #0fb202">#}
-{#										+{{order.money| slice:"1:"}}#}
-{#									</span>#}
-{#								{% else %}#}
-{#									<span style="color: #cf0404">#}
-{#										-{{order.money}}#}
-{#									</span>#}
-{#								{% endif %}#}
-{#							{% endif %}#}
-{#						</td>#}
+						<td class="xui-order-info-money xui-fontArial">
+                            {% if order.money < '0' %}
+                                <span style="color: #0fb202">
+                                    +{{order.money| slice:"1:"}}
+                                </span>
+                            {% else %}
+                                <span style="color: #cf0404">
+                                    -{{order.money}}
+                                </span>
+                            {% endif %}
+						</td>
 						<td class="xui-order-info-name">
-							{% if order.event_type == '积分兑换' %}
-							<span>
-							兑换平台
-							</span>
-							{% else %}
-							{% if order.money < '0' %}
-							<span>
-							[退款]{{order.product_name}}
-							</span>
-							{% else %}
-							<span>
-							[商品]{{order.product_name}}
-							</span>
-							{% endif %}
-							{% endif %}
+                            {% if order.money < '0' %}
+                            <span>
+                            {{order.product_name}}
+                            </span>
+                            {% else %}
+                            <span>
+                            {{order.product_name}}
+                            </span>
+                            {% endif %}
 						</td>
 					</tr>
 					{% endfor%}
