--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -284,7 +284,7 @@
                     if(W.group_status != '团购未生效'){
                         if(group_type != ""){
                             $('.wui-i-product-price-group').show();
-                            $('.wui-i-title-pic').addClass('wui-i-title-pic-'+group_type);
+                            //$('.wui-i-title-pic').addClass('wui-i-title-pic-'+group_type);
                             $('.wui-i-product-price-group-original-price').html(product_original_price+'元');
                             $('.wui-i-product-price-group-group-price').html(product_group_price+'元');
                         }
