bug 列表页查询条件  详情页查询条件

--- a/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
@@ -15,6 +15,7 @@
 					<option value ="0">未领取</option>
 					<option value ="1">已领取</option>
 					<option value ="2">已过期</option>
+					<option value ="3">已失效</option>
 				</select>
 			</div>
 		</div>
