--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -322,25 +322,25 @@
 			return result;
 		}
 		//获取message_count
-        $.ajax({
-			url:'{{fans_host}}/count/message_count/',
-			type:'post',
-			dataType:'jsonp',
-			success:function(response) {
-				if (response.code == 200) {
-					var message_count=response.data.message_count;
-					if(message_count != 0){
-						$("#message_count").html(message_count);
-						$("#message_count_inner").html(message_count);
-						$("#popover838423").css('display','inline');
-						$("#message_count").css('display','inline');
-						$("#message_href").attr("href","{{ fans_host }}/message/message_list/?from=portal");
-					}
-				}else{
-					xlog("获取message_count失败")
-				}
-			}
-		});
+{#        $.ajax({#}
+{#			url:'{{fans_host}}/count/message_count/',#}
+{#			type:'post',#}
+{#			dataType:'jsonp',#}
+{#			success:function(response) {#}
+{#				if (response.code == 200) {#}
+{#					var message_count=response.data.message_count;#}
+{#					if(message_count != 0){#}
+{#						$("#message_count").html(message_count);#}
+{#						$("#message_count_inner").html(message_count);#}
+{#						$("#popover838423").css('display','inline');#}
+{#						$("#message_count").css('display','inline');#}
+{#						$("#message_href").attr("href","{{ fans_host }}/message/message_list/?from=portal");#}
+{#					}#}
+{#				}else{#}
+{#					xlog("获取message_count失败")#}
+{#				}#}
+{#			}#}
+{#		});#}
 
 		function initSubmit(){
 			$('#old_password').val('');
