--- a/weapp/mall/templates/mall/editor/pay_interfaces.html
+++ b/weapp/mall/templates/mall/editor/pay_interfaces.html
@@ -19,6 +19,7 @@
 	data-is-active="{% if pay_interface.is_active %}true{% else %}false{% endif %}"
 >
 	<h2 id="pay-title" class="xui-i-title xui-headHeight">
+		{% if not pay_interface.name == "翼支付" %}
             <span class="fb">{{pay_interface.name}}</span>
             {% if pay_interface.is_active %}
             <div id="pay-status" class="xui-floatBtn fb">(已启用)</div>
@@ -31,6 +32,7 @@
               <label class="xa-enable btn btn-success xui-saveBtn  xui-payStatusOn" value='0'><span>启用</span></label>
             </div>
             {% endif %}
+		{% endif %}
     </h2>
 	<div class="xui-i-content">
 		{% if pay_interface.name == "微信支付" %}
