福利卡券页面样式调整

--- a/weapp/mall/templates/mall/editor/promotion/virtual_product_codes.html
+++ b/weapp/mall/templates/mall/editor/promotion/virtual_product_codes.html
@@ -62,7 +62,7 @@
 				<th >卡券状态</th>
 				<th >领用时间</th>
 				<th >领取人</th>
-				<th >订单号</th>
+				<th >订单编号</th>
 			</tr>
 		</thead>
 		<tbody id='product_list' class="xui-flashSaleTbody">
