--- a/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
@@ -9,7 +9,7 @@
 		</div>
 		<div class="xui-col disTc">
 			<div class="xui-i-item">
-				<label>领用状态：</label>
+				<label>卡券状态：</label>
 				<select id="status" name="status">
 					<option value ="-1">全部</option>
 					<option value ="0">未领取</option>
