订单列表筛选面板增加重置按钮；调整导出结果按钮

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -90,13 +90,13 @@
 		<input type="checkBox" name="selectAllPrintOrders">
 		<span class="ml5 mr10">全选</span>
 		<a title="批量打印发货单" class="xa-order-print" href="javascript:void(0);">批量打印发货单</a>
+		<a href="javascript:void(0);" class="btn fr btn-default xa-export mr20" style="margin:4px 10px;" id="export_data_file">导出结果</a>
+
     </div>
   <!-- 订单打印 2016.04.08 end -->
-	<div class="w500 pa pr30 div_export" style="top:10px;left:500px;line-height:30px;">
-
+	<!--<div class="w500 pr30 div_export" style="top:10px;left:500px;line-height:30px;">
 		<a href="javascript:void(0);" class="btn fr btn-default xa-export mr20 " id="export_data_file">导出结果</a>
-		
-	</div>
+	</div>-->
 	<table class="table table-condensed mb0 xui-tableHead">
 		<thead>
 			<tr>
