--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -133,7 +133,8 @@
 	</div>
 </div>
 <div class="xui-btn-group">
-	<a type="button" class="btn btn-primary mr40 seacrh-order-btn xui-fontBold" id="seacrh-order-btn">查&nbsp; &nbsp;询</a>
-	<a class="btn btn-default export-btn xui-fontBold" href="javascript:void(0);">导出订单</a>
+	<a type="button" class="btn btn-primary mr40 seacrh-order-btn xui-fontBold ml0" id="seacrh-order-btn">查&nbsp; &nbsp;询</a>
+	<!--<a class="btn btn-default export-btn xui-fontBold" href="javascript:void(0);">导出订单</a>-->
+	<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重置</a>
 </div>
 </script>
