--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -771,6 +771,7 @@ $(document).ready(function() {
 						filter_value:filter_value,
 						isAlreadyExport : true,
 						app: 'member',
+						resource: 'export_file_param',
 						timelinesOptions: {
 							
 						}
