--- a/weapp/mall/templates/mall/editor/product_review_list.html
+++ b/weapp/mall/templates/mall/editor/product_review_list.html
@@ -140,6 +140,7 @@ $(document).ready(function(){
                         filter_value:filter_value,
                         isAlreadyExport : true,
                         app: 'mall2',
+                        resource: 'export_file_param',
                         timelinesOptions: {
                             
                         }
