卡没有密码时字不显示

--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_others.html
@@ -244,8 +244,10 @@
 								到账时间:
 								<span class="xui-numfont">{{item.time | slice:"10"}}</span>
 								<span class="fr">
+									{% if item.password %}
 									密码:
 									<span class="xui-numfont">{{item.password}}</span>
+									{% endif %}
 								</span>
 							</span>
 						</div>
