--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -178,17 +178,17 @@
 				<tr data-order-id="${group.fackorder.id}">
 					<td class="nowrap" width="75">
 						{{if data.mall_type}}
+							{{if group.fackorder.type == 'wzcard' }}
+								<i class="xui-virtualProductIcon">卡</i>${group.products[0].supplier_store_name}
+							{{/if}}
+							{{if group.fackorder.type == 'virtual' }}
+								<i class="xui-virtualProductIcon">码</i>${group.products[0].supplier_store_name}
+							{{/if}}
 							{{if group.id > 0}}
 							    ${data.supplier[group.id]}
 							{{/if}}
 							{{if group.supplier_user_id > 0 }}
 								<i class="xui-icon-sync">同</i>${group.products[0].supplier_store_name}
-							{{/if}}
-							{{if group.fackorder.type == 'wzcard' }}
-								<i class="xui-icon-sync">卡</i>${group.products[0].supplier_store_name}
-							{{/if}}
-							{{if group.fackorder.type == 'virtual' }}
-								<i class="xui-icon-sync">码</i>${group.products[0].supplier_store_name}
 							{{/if}}
                         {{else}}
                             {{if order.supplier_user_id > 0}}
