福利卡券导出

--- a/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_vritual_product_codes_filter_view/template.html
@@ -98,6 +98,6 @@
 <div class="xui-btn-group">
 	<a class="btn btn-primary mr40 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;询</a>
 	<a class="btn btn-default xa-reset xui-fontBold mr40" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
-	<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">导&nbsp;&nbsp;&nbsp;出</a>
+	<a class="btn btn-default xa-export xui-fontBold" href="/mall2/virtual_product_codes_export/">导&nbsp;&nbsp;&nbsp;出</a>
 </div>
 </script>
